# Blackjack

./: .gitignore  AI_Player.cpp  AI_Player.h  Blackjack.cpp  Blackjack.h  CMakeLists.txt  Dealer.cpp  Dealer.h  HumanPlayer.h  IPlayer.cpp  IPlayer.h  Player.h  main.cpp
Calc/: CMakeLists.txt  Calc.h
Calc/test/: CMakeLists.txt  test_calc.cpp
Test_main/: CMakeLists.txt  Test_m.cpp
Test_main/test/: CMakeLists.txt  Test_main.cpp
